[tool.poetry]
name = "python-mm"
version = "0.0.0"
description = "Minimialistic MasterMind with Python"
authors = ["Tero Niemi <talamus@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
colorama = "^0.4.6"
readchar = "^4.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
